docs: add documentation for  get openings
