# docs/swagger.json
@@ -5,6 +5,33 @@
     },
     "paths": {
         "/openings": {
+            "get": {
+                "description": "get all the job openings",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "openings"
+                ],
+                "summary": "get openings",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.GetOpeningsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "create a new job opening",
                 "consumes": [
@@ -52,7 +79,7 @@
         },
         "/openings/{id}": {
             "get": {
-                "description": "get a new job opening",
+                "description": "get a job opening",
                 "consumes": [
                     "application/json"
                 ],
@@ -94,7 +121,7 @@
                 }
             },
             "delete": {
-                "description": "delete a new job opening",
+                "description": "delete a job opening",
                 "consumes": [
                     "application/json"
                 ],
@@ -205,6 +232,20 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/schemas.OpeningResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.GetOpeningsResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.OpeningResponse"
+                    }
                 },
                 "message": {
                     "type": "string"
