# handler/response.go
@@ -27,6 +27,11 @@ type GetOpeningResponse struct {
 	Data    schemas.OpeningResponse `json:"data"`
 }
 
+type GetOpeningsResponse struct {
+	Message string                  `json:"message"`
+	Data    []schemas.OpeningResponse `json:"data"`
+}
+
 func sendError(ctx *gin.Context, code int, msg string) {
 	ctx.Header("Content-Type", "application/json")
 	ctx.JSON(code, gin.H{
